Archive2/2b/6823ba5b723fc2/output
main.cpp: In function 'void f(T&&)':
main.cpp:11:37: error: type/value mismatch at argument 1 in template parameter list for 'template<class T> struct name'
 void f(T&& x) { x.template name<true>(); }
                                     ^
main.cpp:11:37: error:   expected a type, got 'true'
main.cpp: At global scope:
main.cpp:15:1: error: expected ',' or ';' at end of input
 }
 ^
