Archive2/2b/6823ba5b723fc2/main.cpp
template<typename T>
struct name {};

struct A
{
    template<bool B>
	void name() { }
};

template <bool B, typename T>
void f(T&& x) { x.template name<true>(); }

int main
{
}